--- a/templates/facecapture.html
+++ b/templates/facecapture.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Post an Image test</title>
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+  <title>Post an Image test</title>
 
 </head>
 
