--- a/templates/facecapture.html
+++ b/templates/facecapture.html
@@ -41,7 +41,7 @@
       </div>
       <div align="center">
         <br><br><br><br><br>
-        <a href="http://localhost:5000/sen">
+        <a href="http://attendance.localtunnel.me/sen">
           <button>Submit</button>
         </a>
       </div>
