--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
   <h1>AUTOMATED ATTENDANCE</h1>
   <br><br><br><br><br><br>
 
-  <a href='http://localhost:5000/register'>
+  <a href='http://attendance.localtunnel.me/register'>
     <div class="card card-1">
       <br><br>
       <img src="{{ url_for('static', filename='register.png') }}" height="300px" width="300px" alt="register.png">
@@ -64,7 +64,7 @@
       <h2>Register</h2>
     </div>
   </a>
-  <a href="http://localhost:5000/register">
+  <a href="https://attendance.localtunnel.me/attendace">
     <div class="card card-2">
       <br><br>
       <img src="{{ url_for('static', filename='attendance.png') }}" height="300px" width="300px" alt="attendance.png">
@@ -72,7 +72,7 @@
       <h2>Attendance</h2>
     </div>
   </a>
-  <a href="sum.html">
+  <a href="https://attendance.localtunnel.me/summary">
     <div class="card card-3">
       <br><br>
       <img src="{{ url_for('static', filename='attreg.png') }}" height="300px" width="300px" alt="attreg.png">
