--- a/templates/facecapture.html
+++ b/templates/facecapture.html
@@ -1,56 +1,89 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/facecapture.css') }}">
-  </head>
+<head>
+    <title>Facecapture</title>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+</head>
+<style>
+    /* mirror the image */
+    video, canvas {
+    transform: scale(-1, 1); /*For Firefox (& IE) */
+    -webkit-transform: scale(-1, 1); /*for Chrome & Opera (& Safari) */
+}
+</style>
+<body>
+  <div>
+    <h1 align="center">Take a picture of your face</h1>
+  </div>
+  <br><br>
+  <div align="center">
+<video id="myVideo" autoplay></video>
+<canvas  id="myCanvas" width="700" height="525"></canvas>
+</div>
+<br><br>
+<div align="center">
 
+<input onclick="sendImagefromCanvas();" type="button" value="Capture Image" id="button1" />
+<a href="http://localhost:5000/sen">
+  <button>Submit</button>
+</a>
+</div>
+<script>
 
-  <body onload="init();" bgcolor = "#C0C0C0">
+    let v = document.getElementById("myVideo");
 
+    //create a canvas to grab an image for upload
+    let imageCanvas = document.getElementById("myCanvas");
+    //createElement('canvas');
+    let imageCtx = imageCanvas.getContext("2d");
 
-    <div>
-      <h1 align="center">Take a picture of your face</h1>
-    </div>
+    //Add file blob to a form and post
+    function postFile(file) {
+        let formdata = new FormData();
+        formdata.append("image", file);
+        let xhr = new XMLHttpRequest();
+        xhr.open('POST', 'http://localhost:5000/image', true);
+        xhr.onload = function () {
+            if (this.status === 200)
+                console.log(this.response);
+            else
+                console.error(xhr);
+        };
+        xhr.send(formdata);
+    }
 
+    //Get the image from the canvas
+    function sendImagefromCanvas() {
 
+        //Make sure the canvas is set to the current video size
+        imageCanvas.width = v.videoWidth;
+        imageCanvas.height = v.videoHeight;
 
-    <div class="split left">
-      <div align = "center">
-        <h2>Take picture</h2>
-      </div>
-      <div align = "center">
-        <video onclick="snapshot(this);" width=700 height=700 id="video" autoplay></video>
-      </div>
-      <div align = "center">
-        <input onclick="snapshot();" type="button" value="Capture Image" id="button1" />
-      </div>
+        imageCtx.drawImage(v, 0, 0, v.videoWidth, v.videoHeight);
 
-    </div>
+        //Convert the canvas to blob and post the file
+        imageCanvas.toBlob(postFile, 'image/jpeg');
+    }
 
+    //Take a picture on click
+    v.onclick = function() {
+        console.log('click');
+        sendImagefromCanvas();
+    };
 
+    window.onload = function () {
 
-    <div class="split right">
-      <div align="center">
-        <h2><br><br><br>
-          Captured Image
+        //Get camera video
+        navigator.mediaDevices.getUserMedia({video: {width: 1280, height: 720}, audio: false})
+            .then(stream => {
+                v.srcObject = stream;
+            })
+            .catch(err => {
+                console.log('navigator.getUserMedia error: ', err)
+            });
 
-        </h2>
-        <br><br><br><br>
-        <canvas  id="myCanvas" width="700" height="525"></canvas>
-      </div>
-      <div align="center">
-        <br><br><br><br><br>
-        <a href="http://atten.localtunnel.me/sen">
-          <button>Submit</button>
-        </a>
-      </div>
-    </div>
+    };
 
-
-
-  </body>
-
-
-  <script src="{{ url_for('static', filename='js/facecapture.js') }}"></script>
+</script>
+</body>
 </html>
